<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/info"
        android:title="@string/rate_app"
        app:showAsAction="ifRoom"
        android:icon="@drawable/info"/>
    <item android:id="@+id/rating"
        android:title="@string/rate_app"
        app:showAsAction="ifRoom"
        android:icon="@drawable/star"/>
    <item android:id="@+id/game_restart"
        android:title="@string/game_restart"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_score"
        android:title="@string/action_score"
        app:showAsAction="never" />
    <item android:id="@+id/app_exit"
        android:title="@string/app_exit"
        app:showAsAction="never" />
</menu>
