<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tool:context=".SettingsActivity">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_shadow"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/color_blue"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/symbol_prompt"
                    android:textColor="@color/color_yellow"
                    style="@style/Base.TextAppearance.AppCompat.Caption"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/first_turn">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/symbol_x"
                        android:buttonTint="@color/color_yellow"
                        android:textColor="@color/color_white"
                        android:id="@+id/radio_x"
                        android:onClick="radioButtonClicked"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/symbol_o"
                        android:buttonTint="@color/color_yellow"
                        android:textColor="@color/color_white"
                        android:id="@+id/radio_o"
                        android:onClick="radioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_with_shadow">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/color_blue"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/level_prompt"
                    android:textColor="@color/color_yellow"
                    style="@style/Base.TextAppearance.AppCompat.Caption"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/difficulty_level">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_yellow"
                        android:textColor="@color/color_white"
                        android:text="@string/level_easy"
                        android:id="@+id/radio_easy"
                        android:onClick="radioButtonClicked"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_yellow"
                        android:textColor="@color/color_white"
                        android:text="@string/level_normal"
                        android:id="@+id/radio_normal"
                        android:onClick="radioButtonClicked"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_yellow"
                        android:textColor="@color/color_white"
                        android:text="@string/level_hard"
                        android:id="@+id/radio_hard"
                        android:onClick="radioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textColor="@color/color_yellow"
            android:drawableStart="@android:drawable/stat_sys_warning"
            android:gravity="center_vertical"
            android:text="@string/reset_game_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="invisible"
            android:id="@+id/reset_alert"/>
    </TableLayout>
</ScrollView>