<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tool:context=".ScoreboardActivity">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_with_shadow">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/color_blue"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_yellow"
                    android:paddingBottom="2dp">
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_blue">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="50dp"
                            android:src="@drawable/x_e"
                            android:padding="@dimen/abc_control_padding_material"
                            android:adjustViewBounds="true"/>
                    </LinearLayout>
                    <TextView
                        android:text="@string/title_win"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end|bottom"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@color/color_blue"/>
                    <TextView
                        android:text="@string/title_draw"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end|bottom"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@color/color_blue"/>
                    <TextView
                        android:text="@string/title_lost"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end|bottom"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@color/color_blue"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/level_easy"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_0"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_1"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_2"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/level_normal"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_3"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_4"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_5"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/level_hard"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_6"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_7"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_8"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_with_shadow">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/color_blue"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_yellow"
                    android:paddingBottom="2dp">
                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_blue">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="50dp"
                            android:padding="@dimen/abc_control_padding_material"
                            android:src="@drawable/o_e"
                            android:adjustViewBounds="true"/>
                    </LinearLayout>
                    <TextView
                        android:text="@string/title_win"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end|bottom"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_blue"/>
                    <TextView
                        android:text="@string/title_draw"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end|bottom"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_blue"/>
                    <TextView
                        android:text="@string/title_lost"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end|bottom"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@color/color_blue"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/level_easy"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_9"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_10"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_11"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/level_normal"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_12"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_13"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_14"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/level_hard"
                        android:textColor="@color/color_white"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_15"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_16"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/score_17"
                        android:textColor="@color/color_yellow"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="@dimen/activity_horizontal_margin"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
    </TableLayout>
</ScrollView>